# GuajiraClimateAgents

./: README.md  langgraph.json  main.py  main_telegram.py  pyproject.toml
data/checkpoints/: .gitkeep  telegram_checkpoints.db-shm  telegram_checkpoints.db-wal
data/models/LSTM/: model_LSTM_Albania.pt  model_LSTM_Barrancas.pt  model_LSTM_Distraccion.pt  model_LSTM_Fonseca.pt  model_LSTM_La_Jagua_del_Pilar.pt  model_LSTM_Manaure.pt  model_LSTM_Mingueo.pt  model_LSTM_Riohacha.pt  model_LSTM_San_Juan_del_Cesar.pt  model_LSTM_Uribia.pt
data/models/optuna-LSTM/: optuna_results_Albania.db  optuna_results_Barrancas.db  optuna_results_Distraccion.db  optuna_results_El_Molino.db  optuna_results_Fonseca.db  optuna_results_Hatonuevo.db  optuna_results_La_Jagua_del_Pilar.db  optuna_results_Maicao.db  optuna_results_Manaure.db  optuna_results_Mingueo.db  optuna_results_Riohacha.db  optuna_results_San_Juan_del_Cesar.db  (+1 more)
docs/: DATABASE_UPDATE_GUIDE.md  ORGANIZATION_SUMMARY.md
examples/: console_ClimateAgent.py  console_SimpleRAG.py  query_forecast.py  test_forecast_tools.py  test_telegram_forecast.py
notebooks/: 01_notebook.ipynb  02_RAG.ipynb  03_RAG_Ollama.ipynb  04_download_data.ipynb  05_training_colab.ipynb  06_performance_model.ipynb  07_connectDB.ipynb  08_checkDB.ipynb  09_SQLAgent.ipynb  10_restructure_datetime.ipynb  11_UpdateDB.ipynb  12_CheckDB.ipynb  13_Forecast.ipynb  14_CreateForecastTable.ipynb  15_CheckForecast.ipynb
scripts/: codes.sh  update_db_simple.py
src/agents/: main.py
src/bot/: __init__.py  checkpointer.py  image_handler.py  telegram_bot.py  thread_manager.py
src/models/: forecast_generator.py
src/scheduler/: update_scheduler.py
src/utils/: climate_data.py  db_updater.py  forecast_db_updater.py  logger.py  vector_store.py
(+8 files in other folders)
