[project]
name = "guajiraclimateagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "fastapi[standard]>=0.123.8",
    "langchain>=1.1.2",
    "langchain-anthropic>=1.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-cli[inmem]>=0.4.11",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pymssql>=2.3.10",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
